--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>interactivityIISP26</title>
 </head>
 <body>
-    Hello World
+    Hello World, Gray was here. 
 </body>
 </html>
