added the image of the rabbit, and the video

--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>interactivityIISP26</title>
+    <title>GrayShreveinteractivityIISP26</title>
 </head>
-<body>
-    Hello World, Gray was here. 
-</body>
+          <body>
+        Hello World, Gray was here. 
+        <P>This is my first paragraph.</P> <p>Content</p>
+        <h1> Main Heading</h1>
+    <h2>Heading level 2</h2>
+    <h3>Heading level 3</h3>
+    <h4>Heading level 4</h4>
+
+        <p> This is a paragraph of text. It's always going to be a single parargraph </p>
+        <span> This is inline text </span>
+
+        <strong>This is bold text.</strong>
+        <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
+        <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
+        
+        <video controls width="873" height="1162">
+        <source src="hello_world\GrayShreve_interactivityIISP2026_helloWorld\images\IMG_8155.jpg" type="video">
+       </video>    
+        <p>
+    <i> This is italic text. </i> 
+    <br> This creates a line break. 
+    <ul>
+    <li> Unordered Item 1</li>
+    <li> Unordered Item 2</li>
+    </ul>
+
+    <ol>
+        <li> Ordered Item 1</li>
+        <li> Ordered Item 2</li>
+    </ol>
+    </p>
+           </body>
 </html>
