accidentally made my video an image, theying to get my video to work

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <strong>This is bold text.</strong>
         <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
         <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
-        
-        <video controls width="873" height="1162">
-        <source src="hello_world\GrayShreve_interactivityIISP2026_helloWorld\images\IMG_8155.jpg" type="video">
-       </video>    
+
+        <video controls width="1080" height="1920">
+        <source src="  " type="video">
+        </video>    
         <p>
     <i> This is italic text. </i> 
     <br> This creates a line break. 
