--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
 
         <video controls width="1080" height="1920">
-        <source src="  " type="video">
+        <source src="C:\Users\haile\Desktop\InteractivityIISP26\hello_world\GrayShreve_interactivityIISP2026_helloWorld\images\skellyvid.mp4" type="video/mp4">
         </video>    
         <p>
     <i> This is italic text. </i> 
