--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
 </head>
           <body>
         Hello World, Gray was here. 
+        <button type="button">click here to learn more</button>
         <P>This is my first paragraph.</P> <p>Content</p>
+    
         <h1> Main Heading</h1>
     <h2>Heading level 2</h2>
     <h3>Heading level 3</h3>
     <h4>Heading level 4</h4>
 
+<svg width="300" height="200">
+  <polygon points="100,10 40,198 190,78 10,78 160,198"
+  style="fill:rgb(5, 102, 124);stroke:rgba(128, 30, 0, 0.259);stroke: width 10px;;fill-rule:evenodd;" />
+</svg>
         <p> This is a paragraph of text. It's always going to be a single parargraph </p>
         <span> This is inline text </span>
 
         <strong>This is bold text.</strong>
+          </p>
         <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
+        <br>
         <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
 
-        <video controls width="1080" height="1920">
-        <source src="C:\Users\haile\Desktop\InteractivityIISP26\hello_world\GrayShreve_interactivityIISP2026_helloWorld\images\skellyvid.mp4" type="video/mp4">
+        <video controls autoplay width="1080" height="1920">
+        <source src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/skellyvid.mp4" type="video/mp4">
         </video>    
-        <p>
+    <br>
     <i> This is italic text. </i> 
     <br> This creates a line break. 
     <ul>
