I added and edited some tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <headers>
 <head>
     <title>GrayShreveinteractivityIISP26</title>
 </head>
+</headers>
+
+<main>
           <body>
         Hello World, Gray was here. 
         <button type="button">click here to learn more</button>
@@ -13,6 +17,9 @@
     <h3>Heading level 3</h3>
     <h4>Heading level 4</h4>
 
+    <label for="type here">type here:</label>
+<input type="text" id="textbox" name="fname">
+
 <svg width="300" height="200">
   <polygon points="100,10 40,198 190,78 10,78 160,198"
   style="fill:rgb(5, 102, 124);stroke:rgba(128, 30, 0, 0.259);stroke: width 10px;;fill-rule:evenodd;" />
@@ -22,13 +29,16 @@
 
         <strong>This is bold text.</strong>
           </p>
+          <section>
         <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
         <br>
         <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
-
+<div>
         <video controls autoplay width="1080" height="1920">
         <source src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/skellyvid.mp4" type="video/mp4">
         </video>    
+</div>
+          </section>
     <br>
     <i> This is italic text. </i> 
     <br> This creates a line break. 
@@ -42,5 +52,7 @@
         <li> Ordered Item 2</li>
     </ol>
     </p>
+    <footer>Gray Shreve </footer>
            </body>
+</main>
 </html>
