I added h1 and <b> elements

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -6,9 +6,17 @@
   <title>My First Web Page</title>
 </head>
 <body>  <!--Contains the visible page content-->
-    Hello, World!
+    <h1> Hello World!</h1>
+    <h3>My name is Gray Shreve, I <b>love art</b>, hanging out with my loved ones, and junk journaling! </h3>
+    <br> 
 </body>
 </html>
 
 <!--and whatever this looks like, these are comments. 
 -->
+
+<!--Use heading and paragraph tags
+Use different styling tag like <span> <strong> <b> <i>
+Use line break <br>
+use a semantic elements, use div element
+read two other type of tags and try out two attributes of your choice-->
