I added a bold element

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -7,7 +7,8 @@
 </head>
 <body>  <!--Contains the visible page content-->
     <h1> Hello World!</h1>
-    <h3>My name is Gray Shreve, I <b>love art</b>, hanging out with my loved ones, and junk journaling! </h3>
+    <h3>My name is Gray Shreve, I love art, hanging out with my loved ones, and junk journaling! </h3>
+<b> My favorite things to draw are animals, skulls, and people.</b>
     <br> 
 </body>
 </html>
