--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -8,8 +8,16 @@
 <body>  <!--Contains the visible page content-->
     <h1> Hello World!</h1>
     <h3>My name is Gray Shreve, I love art, hanging out with my loved ones, and junk journaling! </h3>
-<b> My favorite things to draw are animals, skulls, and people.</b>
+<strong> My favorite things to draw are animals, skulls, and people. </strong>
+
+ <p> My mother has <span style="color:blue"> blue </span> eyes. </p>
     <br> 
+    <h4></h4>
+
+    <footer><span style="color:aquamarine">Gray Shreve</span></footer>
+
+
+
 </body>
 </html>
 
