I added 2 new tags i hadnt used

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -7,12 +7,19 @@
 </head>
 <body>  <!--Contains the visible page content-->
     <h1> Hello World!</h1>
-    <h3>My name is Gray Shreve, I love art, hanging out with my loved ones, and junk journaling! </h3>
-<strong> My favorite things to draw are animals, skulls, and people. </strong>
+<main>
+<div
+    <h3>My name is Gray Shreve, I <em>love</em>, hanging out with my loved ones, and junk journaling! </h3>
+</div>
+</main>
+    <br>
+   <strong> My favorite things to draw are animals, skulls, and people. </strong>
 
-
+</main>
     <footer><span style="color:aquamarine">Gray Shreve</span></footer>
-
+    
+<p> <s>1/18/26</s> </p>
+<p>1/19/26</p>
 
 
 </body>
@@ -21,8 +28,5 @@
 <!--and whatever this looks like, these are comments. 
 -->
 
-<!--Use heading and paragraph tags
-Use different styling tag like <span> <strong> <b> <i>
-Use line break <br>
-use a semantic elements, use div element
+<!--
 read two other type of tags and try out two attributes of your choice-->
