I added a list of my current favorite foods and used two new attributes

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -11,22 +11,26 @@
 <div
     <h3>My name is Gray Shreve, I <em>love</em>, hanging out with my loved ones, and junk journaling! </h3>
 </div>
-</main>
+<ol reversed>
+  Current Favorite foods
+  <li>Chicken Tikka Masala </li>
+  <li>breakfast burrito with avacado crema</li>
+  <li>yogurt with mango and granola</li>
+</ol>
+
     <br>
    <strong> My favorite things to draw are animals, skulls, and people. </strong>
 
 </main>
     <footer><span style="color:aquamarine">Gray Shreve</span></footer>
-    
+
 <p> <s>1/18/26</s> </p>
 <p>1/19/26</p>
 
-
+<button type:button disabled > Click Me </button>
+</main> 
 </body>
 </html>
 
 <!--and whatever this looks like, these are comments. 
 -->
-
-<!--
-read two other type of tags and try out two attributes of your choice-->
