trying to get my website to work

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <body>
         Hello World, Gray was here. 
         <button type="button">click here to learn more</button>
-        <P>This is my first paragraph.</P> <p>Content</p>
+        <p> <div class="collage"></div> This is my first paragraph.</p> <p>Content</p>
     
         <h1> Main Heading</h1>
     <h2>Heading level 2</h2>
