--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -8,16 +8,16 @@
 <body>  <!--Contains the visible page content-->
     <h1> Hello World!</h1>
 <main>
-<div
-    <h3>My name is Gray Shreve, I <em>love</em>, hanging out with my loved ones, and junk journaling! </h3>
-</div>
+
+  <h3> My name is Gray Shreve, I <em> love </em>, hanging out with my loved ones, and junk journaling! </h3>
+<div>
 <ol reversed>
   Current Favorite foods
   <li>Chicken Tikka Masala </li>
   <li>breakfast burrito with avacado crema</li>
   <li>yogurt with mango and granola</li>
 </ol>
-
+</div>
     <br>
    <strong> My favorite things to draw are animals, skulls, and people. </strong>
 
