Co-authored-by: Leilei <lilyxia99@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
     <headers>
 <head>
+    <meta charsete="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale:1.0"> 
     <title>GrayShreveinteractivityIISP26</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 </headers>
 
 <main>
-          <body>
-        Hello World, Gray was here. 
+         <body> 
+         Hello World, Gray was here. 
         <button type="button">click here to learn more</button>
-        <p> <div class="collage"></div> This is my first paragraph.</p> <p>Content</p>
+        <p> <div class="collage"> This is my first paragraph.</p></div> 
+        
+        <p>Content</p>
     
-        <h1> Main Heading</h1>
-    <h2>Heading level 2</h2>
+        <div> <h1 style="color:blue; font-size: 20px;">This is my blue text </h1> </div>
+    <h2 id="special1"> </h2>
+
     <h3>Heading level 3</h3>
     <h4>Heading level 4</h4>
 
@@ -24,7 +30,7 @@
   <polygon points="100,10 40,198 190,78 10,78 160,198"
   style="fill:rgb(5, 102, 124);stroke:rgba(128, 30, 0, 0.259);stroke: width 10px;;fill-rule:evenodd;" />
 </svg>
-        <p> This is a paragraph of text. It's always going to be a single parargraph </p>
+        <p style="position:absolute;top:9px;left:0px"> This is a paragraph of text. It's always going to be a single parargraph </p>
         <span> This is inline text </span>
 
         <strong>This is bold text.</strong>
