I started to try to move elements around

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Content</p>
     
         <div> <h1 style="color:blue; font-size: 20px;">This is my blue text </h1> </div>
-    <h2 id="special1"> </h2>
+    <h2 id="special1"> I love this color</h2>
 
     <h3>Heading level 3</h3>
     <h4>Heading level 4</h4>
@@ -40,7 +40,7 @@
         <br>
         <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
 <div>
-        <video controls autoplay width="1080" height="1920">
+        <video class="collage" style="top:100px;px;left:2S0px;" autoplay width="540" height="960">
         <source src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/skellyvid.mp4" type="video/mp4">
         </video>    
 </div>
