adding some moved elements through css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 </headers>
+°❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*⋆༺𓆩☠︎︎𓆪༻⋆･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*
 
-<main>
          <body> 
+            <main>
          Hello World, Gray was here. 
-        <button type="button">click here to learn more</button>
         <p> <div class="collage"> This is my first paragraph.</p></div> 
         
         <p>Content</p>
     
-        <div> <h1 style="color:blue; font-size: 20px;">This is my blue text </h1> </div>
+ <h1 class=.collage style="color:blue;font-size:20px;position:absolute;top:200px;left:120px">This is my blue text </h1> 
     <h2 id="special1"> I love this color</h2>
 
     <h3>Heading level 3</h3>
@@ -30,23 +30,26 @@
   <polygon points="100,10 40,198 190,78 10,78 160,198"
   style="fill:rgb(5, 102, 124);stroke:rgba(128, 30, 0, 0.259);stroke: width 10px;;fill-rule:evenodd;" />
 </svg>
-        <p style="position:absolute;top:9px;left:0px"> This is a paragraph of text. It's always going to be a single parargraph </p>
+        <p style="position:absolute;top:37px;left:120px"> This is a paragraph of text. It's always going to be a single parargraph </p>
         <span> This is inline text </span>
-
-        <strong>This is bold text.</strong>
+<br>
+        <strong>This is a piece I made last year.</strong>
           </p>
           <section>
         <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
         <br>
-        <img width="400" src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" >
+ <!--Question for LeiLei! Why is the image not moving but when I do this with text it does move it? -->
+        <img class="collage" style="top:10px;left:100px" width="300"
+         src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg">
 <div>
-        <video class="collage" style="top:100px;px;left:2S0px;" autoplay width="540" height="960">
+        <video autoplay width="540" height="960">
         <source src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/skellyvid.mp4" type="video/mp4">
         </video>    
 </div>
           </section>
     <br>
-    <i> This is italic text. </i> 
+    <i>I love stingrays</i> 
+    <button type="button">click here to learn more</button>
     <br> This creates a line break. 
     <ul>
     <li> Unordered Item 1</li>
