Cleaning up and trying to add my own font i made

--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale:1.0"> 
     <title>GrayShreveinteractivityIISP26</title>
     <link rel="stylesheet" href="style.css">
+
+    <style> <!-- This is me trying to upload my own font --!>
+
+
+
+
+
+
+
+    </style>
 </head>
 </headers>
 °❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*⋆༺𓆩☠︎︎𓆪༻⋆･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*
 
-         <body style="background-color: rgb(234, 236, 216);"></body>
+         <body style="background-color: rgb(234, 236, 216);">
             <main>
-         Hello World, Gray was here. 
-        <p> <div class="collage"> This is my first paragraph.</p></div> 
+         <p> Hello World, Gray is here.</p>
+
+        <div class="collage"> This is my first paragraph.</div> 
         
-        <p>Content</p>
     
  <h1 class=.collage style="color:rgb(58, 21, 57);font-size:200px;position:absolute;top:200px;left:120px">⋆✴︎˚｡⋆ </h1> 
     <h2 id="special1"> I love this color</h2>
@@ -30,7 +40,7 @@
   <polygon points="100,10 40,198 190,78 10,78 160,198"
   style="fill:rgb(132, 97, 118);stroke:rgba(128, 30, 0, 0.259);stroke: width 10px;;fill-rule:evenodd;" />
 </svg>
-        <p style="position:absolute;top:37px;left:120px"> This is a paragraph of text. It's always going to be a single parargraph </p>
+        <p style="position:absolute;top:48px;left:120px"> This is a paragraph of text. It's always going to be a single parargraph </p>
         <span> This is inline text </span>
 <br>
         <strong>This is a piece I made last year.</strong>
