Co-authored-by: Leilei <lilyxia99@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <title>GrayShreveinteractivityIISP26</title>
     <link rel="stylesheet" href="style.css">
 
-    <style> <!-- This is me trying to upload my own font --!>
-
-
-
-
-
-
+    <style> 
+@font-face {
+    font-family:'GrayGothic';
+    src:url(hello_world/GrayShreve_interactivityIISP2026_helloWorld/Fonts/GrayGothic.ttf) format('ttf') 
+}
 
     </style>
 </head>
 </headers>
 °❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*⋆༺𓆩☠︎︎𓆪༻⋆･°❀⋆.ೃ࿔*°❀⋆.ೃ࿔*:･°❀⋆.ೃ࿔*
 
-         <body style="background-color: rgb(234, 236, 216);">
+         <body style="background-color: rgb(234, 236, 216)"> 
             <main>
          <p> Hello World, Gray is here.</p>
 
@@ -42,20 +40,19 @@
 </svg>
         <p style="position:absolute;top:48px;left:120px"> This is a paragraph of text. It's always going to be a single parargraph </p>
         <span> This is inline text </span>
+        <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a>
 <br>
         <strong>This is a piece I made last year.</strong>
-      
-          </p>
-          <section>
-        <a target="_parent" href="https://www.w3schools.com/tags/default.asp"> This is a link to the HTML reference</a> 
-        <br>
- <!--Question for LeiLei! Why is the image not moving but when I do this with text it does move it? -->
-        <img class="collage" style="top:10px;left:100px" width="300"
-         src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg">
+       <!--Question for LeiLei! Why is the image not moving but when I do it with text it does move it? I also cannot get my custom font to work -->
+</p>
+<img src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/rabbit.jpg" width="300px">
+
+ </p>
 <div>
         <video autoplay width="540" height="960">
         <source src="/hello_world/GrayShreve_interactivityIISP2026_helloWorld/images/skellyvid.mp4" type="video/mp4">
         </video>    
+    </p> 
 </div>
           </section>
     <br>
