--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <h1 class="collage" style="color:rgb(58, 21, 57);font-size:200px;top:0px;left:0px">⋆✴︎˚｡⋆ </h1> 
     <h2 id="special1"> i love this color</h2>
 
-    <h3>BE YOURSELF; EVERYONE ELSE IS ALREADY TAKEN</h3>
+    <h3>BE YOURSELF; EVERYONE ELSE IS ALREADY TAKEN</h3> <!-- place holder for a quote I like-->
     <h4>STARZZ</h4>
 
     <label for="type here">type here:</label>
