notsure what thisismaking me save

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
         <div>this is my first paragraph.</div> 
         
-    
+    <section> 
+        <div class="container"
+
+
+
+    </section>
  <h1 class="collage" style="color:rgb(58, 21, 57);font-size:200px;top:350px;right:100px">⋆✴︎˚｡⋆ </h1>
     <h2 id="special1"> i love this color</h2>
 
