I added a hover elemenet

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <main>
          <h1>  HELLO WORLD GRAY IS HERE.</h1>
 
-        <div>this is my first paragraph.</div> 
+        <div>
+            <p>this is my first paragraph.</p>
+            </div> 
         
     <section> 
         <div class="container"> 
