I made a lot of changes to the journal tryingto  complete the homework. currently stuck on getting my background image to work

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -3,14 +3,33 @@
 <head>   <!--Contains metadata about the document-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
+  <title>Gray's online Journal</title>
+   <link rel="stylesheet" href="style2.css">
+
+     <style> 
+@font-face {
+    font-family:'GrayGothic';
+    src:url("./Fonts/GrayGothic.ttf") format('ttf') 
+}
+
+    </style>
+
+<head> 
+
 </head>
-<body>  <!--Contains the visible page content-->
-    <h1> Hello World!</h1>
+<body> 
+  <div id="background"></div>
+</body>
+
+
+
+    <h1 class="center" style="color:beige">JOURNAL </h1>
 <main>
 
-  <h3> My name is Gray Shreve, I <em> love </em>, hanging out with my loved ones, and junk journaling! </h3>
-<div>
+  <h3> My name is Gray and I <em>love</em> to hang out with my loved ones, art, and junk journaling 
+    <div>
+
+  </div>
 <ol reversed>
   Current Favorite foods
   <li>Chicken Tikka Masala </li>
