I added in a background image, set images relative to width of the screen, added a frame and a artwork of mine.

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -17,26 +17,24 @@
 <head> 
 
 </head>
-<body> 
-  <div id="background"></div>
-</body>
+<body>
+  <img style="position:absolute;top:100px;left:600px;height:200px;" src="images/Skull_Final.png" class=".center">
+  <img style="position:absolute;top: 31px;left:470px;height:350px" src="images/frame.png">
+  <div id="background">
 
+  <main>
+    <h1 class="center">GRAYS JOURNAL </h1>
 
+  <h3 style="color:antiquewhite"> My name is Gray and I <em>love</em> to hang out with my loved ones, art, and junk journaling 
 
-    <h1 class="center" style="color:beige">JOURNAL </h1>
-<main>
-
-  <h3> My name is Gray and I <em>love</em> to hang out with my loved ones, art, and junk journaling 
-    <div>
-
-  </div>
+  
 <ol reversed>
   Current Favorite foods
   <li>Chicken Tikka Masala </li>
   <li>breakfast burrito with avacado crema</li>
   <li>yogurt with mango and granola</li>
 </ol>
-</div>
+
     <br>
    <strong> My favorite things to draw are animals, skulls, and people. </strong>
 
@@ -49,6 +47,7 @@
 <button type:button disabled > Click Me </button>
 </main> 
 </body>
+</div>
 </html>
 
 <!--and whatever this looks like, these are comments. 
