--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -18,18 +18,18 @@
 
 </head>
 <body>
-  <img style="position:absolute;top:100px;left:600px;height:200px;" src="images/Skull_Final.png" class=".center">
-  <img style="position:absolute;top: 31px;left:470px;height:350px" src="images/frame.png">
+  <img style="position:absolute;top:100px;left:600px;height:200px;" src="images/Skull_Final.png" class=".center" alt="Artwork of bear skulls">
+  <img style="position:absolute;top: 31px;left:470px;height:350px" src="images/frame.png" alt="Gothic Frame">
   <div id="background">
 
   <main>
     <h1 class="center">GRAYS JOURNAL </h1>
 
-  <h3 style="color:antiquewhite"> My name is Gray and I <em>love</em> to hang out with my loved ones, art, and junk journaling 
+  <h3 style="color:antiquewhite"> My name is Gray and I <em>love</em> to hang out with my loved ones, making art, and junk journaling </h3>
 
   
-<ol reversed>
-  Current Favorite foods
+<ol reversed style="color: rgb(243, 126, 8);">
+<b>2026 Ins and Outs </b>
   <li>Chicken Tikka Masala </li>
   <li>breakfast burrito with avacado crema</li>
   <li>yogurt with mango and granola</li>
@@ -37,16 +37,15 @@
 
     <br>
    <strong> My favorite things to draw are animals, skulls, and people. </strong>
-
+</body>
 </main>
-    <footer><span style="color:aquamarine">Gray Shreve</span></footer>
+    <footer><span style="color:rgb(21, 17, 22)" class="footer">Gray Shreve</span></footer>
 
 <p> <s>1/18/26</s> </p>
 <p>1/19/26</p>
 
-<button type:button disabled > Click Me </button>
+<button type:button;url="https://"> Click Me </button>
 </main> 
-</body>
 </div>
 </html>
 
