trying to get my images to work on my index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div style="background-color: rgb(173, 133, 211);flex:3">testing the display</div>
         <div style="background-color: rgb(223, 196, 255);flex:7">Another paragraph for testing</div>
         <div class="flex-container"> 
-<p> 
+<p class="center">
     i am in the center 
 </p>
         </div>
@@ -48,7 +48,7 @@
     <h2 id="special1"> i love this color</h2>
 
 <div class="cropContainer" style="position:relative;width:300px;height:200px;"> 
-<img src="images/sculpture.jpg";>
+<img src="images/sculpture.jpg"; class="collage">
 </div>
 
     <h3>“I believe that everything happens for a reason. People change so that you can learn to let go, things go wrong so that you appreciate them when they're right, you believe lies so you eventually learn to trust no one but yourself, and sometimes good things fall apart so better things can fall together.”
