--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -44,7 +44,7 @@
 <p> <s>1/18/26</s> </p>
 <p>1/19/26</p>
 
-<button type:button;url="https://"> Click Me </button>
+<button> Click Me </button>
 </main> 
 </div>
 </html>
