I added a animated element, and a menu that has drop downs

--- a/onlineJournal.html
+++ b/onlineJournal.html
@@ -18,31 +18,55 @@
 
 </head>
 <body>
-  <img style="position:absolute;top:100px;left:600px;height:200px;" src="images/Skull_Final.png" class=".center" alt="Artwork of bear skulls">
-  <img style="position:absolute;top: 31px;left:470px;height:350px" src="images/frame.png" alt="Gothic Frame">
+  <img style="position:fixed;top:120px;left:200px;height:200px;" src="images/Skull_Final.png" class=".center" alt="Artwork of bear skulls">
+  <img style="position:fixed;top:45px;left:70px;height:350px" src="images/frame.png" alt="Gothic Frame">
+  <img style="position:fixed;top:50px;left:785px;height:340px" src="images/notepad.jpg" alt="notepad">
+
+
   <div id="background">
+
+ <section> 
+        <div class="container"> 
+
+        <div class="displayexp"> 
+        <div style="background-color: rgb(50, 9, 88);flex:3"></div>
+        <div style="background-color: rgb(159, 128, 197);flex:2"></div>
+        <div class="flex-container"> 
+
+<details>
+  <summary>To work on</summary>
+  <p>
+</details>
+
+<details>
+  <summary>Ideas</summary>
+  <p>
+</details>
+
+<details>
+  <summary>Favorite Resources</summary>
+  <p>
+</details>
 
   <main>
     <h1 class="center">GRAYS JOURNAL </h1>
 
   <h3 style="color:antiquewhite"> My name is Gray and I <em>love</em> to hang out with my loved ones, making art, and junk journaling </h3>
 
+  <p style="color: rgb(12, 12, 12);"> A few of my favorite things 
+<li> </li>
+<li></li>
+  </p>
+   
+
   
-<ol reversed style="color: rgb(243, 126, 8);">
-<b>2026 Ins and Outs </b>
-  <li>Chicken Tikka Masala </li>
-  <li>breakfast burrito with avacado crema</li>
-  <li>yogurt with mango and granola</li>
-</ol>
 
     <br>
-   <strong> My favorite things to draw are animals, skulls, and people. </strong>
+   <strong style="color:rgb(135, 96, 171)"> My favorite things to draw are animals, skulls, and people. </strong>
 </body>
 </main>
     <footer><span style="color:rgb(21, 17, 22)" class="footer">Gray Shreve</span></footer>
 
-<p> <s>1/18/26</s> </p>
-<p>1/19/26</p>
 
 <button> Click Me </button>
 </main> 
@@ -51,3 +75,4 @@
 
 <!--and whatever this looks like, these are comments. 
 -->
+
